Refactored : Fixed bug
Solved problem of help section for theme change overlapping with light section

--- a/src/main/webapp/CSS/CommonUtils.css
+++ b/src/main/webapp/CSS/CommonUtils.css
@@ -401,7 +401,7 @@ span:before {
         left: 2%;
     }
     #bottom_help {
-        top: 15%;
+        top: 20%;
         left: 7%;
     }
     .theme_bulb {
